added arrow movement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel='stylesheet' href='css/app.css'>
   </head>
   <body>
-    <div class='merged-group'>
+    <!-- <div class='merged-group'>
       <img src='assets/images/IMG_0422.jpg'>
       <img src='assets/images/IMG_0424.jpg'>
       <img src='assets/images/IMG_0425.jpg'>
@@ -15,6 +15,18 @@
       <img src='assets/images/IMG_0431.jpg'>
       <img src='assets/images/IMG_0432.jpg'>
       <img src='assets/images/IMG_0433.jpg'>
+    </div> -->
+
+    <div class='merged-group'>
+      <img src='assets/images2/IMG_5138.jpg'>
+      <img src='assets/images2/IMG_5139.jpg'>
+      <img src='assets/images2/IMG_5140.jpg'>
+      <img src='assets/images2/IMG_5142.jpg'>
+      <img src='assets/images2/IMG_5142.jpg'>
+      <img src='assets/images2/IMG_5143.jpg'>
+      <img src='assets/images2/IMG_5144.jpg'>
+      <img src='assets/images2/IMG_5145.jpg'>
+      <img src='assets/images2/IMG_5146.jpg'>
     </div>
 
 <!--     <div class='unmerged-group'>
