added image selection opacity, and bug fixes for arrow movement

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </div> -->
 
     <div class='merged-group'>
-      <img src='assets/images2/IMG_5138.jpg'>
-      <img src='assets/images2/IMG_5139.jpg'>
-      <img src='assets/images2/IMG_5140.jpg'>
-      <img src='assets/images2/IMG_5142.jpg'>
-      <img src='assets/images2/IMG_5142.jpg'>
-      <img src='assets/images2/IMG_5143.jpg'>
-      <img src='assets/images2/IMG_5144.jpg'>
-      <img src='assets/images2/IMG_5145.jpg'>
-      <img src='assets/images2/IMG_5146.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5138.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5139.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5140.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5142.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5142.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5143.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5144.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5145.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5146.jpg'>
     </div>
 
 <!--     <div class='unmerged-group'>
