fix links for picky gh-pages

--- a/index.html
+++ b/index.html
@@ -5,41 +5,41 @@
   </head>
   <body>
     <!-- <div class='merged-group'>
-      <img src='assets/images/IMG_0422.jpg'>
-      <img src='assets/images/IMG_0424.jpg'>
-      <img src='assets/images/IMG_0425.jpg'>
-      <img src='assets/images/IMG_0426.jpg'>
-      <img src='assets/images/IMG_0427.jpg'>
-      <img src='assets/images/IMG_0428.jpg'>
-      <img src='assets/images/IMG_0430.jpg'>
-      <img src='assets/images/IMG_0431.jpg'>
-      <img src='assets/images/IMG_0432.jpg'>
-      <img src='assets/images/IMG_0433.jpg'>
+      <img src='assets/images/IMG_0422.JPG'>
+      <img src='assets/images/IMG_0424.JPG'>
+      <img src='assets/images/IMG_0425.JPG'>
+      <img src='assets/images/IMG_0426.JPG'>
+      <img src='assets/images/IMG_0427.JPG'>
+      <img src='assets/images/IMG_0428.JPG'>
+      <img src='assets/images/IMG_0430.JPG'>
+      <img src='assets/images/IMG_0431.JPG'>
+      <img src='assets/images/IMG_0432.JPG'>
+      <img src='assets/images/IMG_0433.JPG'>
     </div> -->
 
     <div class='merged-group'>
-      <img class='flipped-image' src='assets/images2/IMG_5138.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5139.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5140.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5142.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5142.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5143.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5144.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5145.jpg'>
-      <img class='flipped-image' src='assets/images2/IMG_5146.jpg'>
+      <img class='flipped-image' src='assets/images2/IMG_5138.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5139.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5140.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5142.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5142.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5143.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5144.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5145.JPG'>
+      <img class='flipped-image' src='assets/images2/IMG_5146.JPG'>
     </div>
 
 <!--     <div class='unmerged-group'>
-      <img src='assets/images/IMG_0422.jpg'>
-      <img src='assets/images/IMG_0424.jpg'>
-      <img src='assets/images/IMG_0425.jpg'>
-      <img src='assets/images/IMG_0426.jpg'>
-      <img src='assets/images/IMG_0427.jpg'>
-      <img src='assets/images/IMG_0428.jpg'>
-      <img src='assets/images/IMG_0430.jpg'>
-      <img src='assets/images/IMG_0431.jpg'>
-      <img src='assets/images/IMG_0432.jpg'>
-      <img src='assets/images/IMG_0433.jpg'>
+      <img src='assets/images/IMG_0422.JPG'>
+      <img src='assets/images/IMG_0424.JPG'>
+      <img src='assets/images/IMG_0425.JPG'>
+      <img src='assets/images/IMG_0426.JPG'>
+      <img src='assets/images/IMG_0427.JPG'>
+      <img src='assets/images/IMG_0428.JPG'>
+      <img src='assets/images/IMG_0430.JPG'>
+      <img src='assets/images/IMG_0431.JPG'>
+      <img src='assets/images/IMG_0432.JPG'>
+      <img src='assets/images/IMG_0433.JPG'>
     </div> -->
     
     <script src='dependencies/jquery.js'></script>
